# ChangeLog for kde-base/mpeglib
# Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/kde-base/cvs-repo/gentoo-x86/kde-base/mpeglib/Attic/ChangeLog,v 1.36 2006/06/01 21:05:10 flameeyes Exp $

  01 Jun 2006; Diego Pettenò <flameeyes@gentoo.org> mpeglib-3.5.1.ebuild:
  Update to new release.

  01 Jun 2006; Thomas Cort <tcort@gentoo.org> mpeglib-3.5.1.ebuild:
  Stable on alpha wrt Bug #132213.

  30 May 2006; Markus Rothe <corsair@gentoo.org> mpeglib-3.5.1.ebuild:
  Stable on ppc64

  29 May 2006; Diego Pettenò <flameeyes@gentoo.org> ChangeLog:
  Drop old versions.

  26 May 2006; Chris Gianelloni <wolf31o2@gentoo.org> mpeglib-3.5.1.ebuild:
  Stable on amd64 wrt bug #132213

  26 May 2006; Chris Gianelloni <wolf31o2@gentoo.org> mpeglib-3.5.1.ebuild:
  Stable on x86 wrt bug #132213

  18 Apr 2006; Diego Pettenò <flameeyes@gentoo.org> mpeglib-3.5.1.ebuild:
  Fix dependencies for modular X. See bug #130341.

  06 Apr 2006; Diego Pettenò <flameeyes@gentoo.org> -mpeglib-3.5.0.ebuild:
  Removed old 3.5.0/3.5.1 packages.

  25 Mar 2006; Aron Griffis <agriffis@gentoo.org> mpeglib-3.4.1.ebuild:
  Mark 3.4.1 stable on ia64

*mpeglib-3.5.1 (23 Jan 2006)

  23 Jan 2006; Dan Armak <danarmak@gentoo.org> +mpeglib-3.5.1.ebuild:
  Version 3.5.1. Not yet released upstream, so package.masked for now.

  12 Dec 2005; Joseph Jezak <josejx@gentoo.org> mpeglib-3.5.0.ebuild:
  Marked ~ppc.

  26 Nov 2005; Dan Armak <danarmak@gentoo.org> mpeglib-3.5.0.ebuild:
  Upstream (unreleased) tarball updated, updating digests.

*mpeglib-3.5.0 (22 Nov 2005)

  22 Nov 2005; Dan Armak <danarmak@gentoo.org> +mpeglib-3.5.0.ebuild:
  Ebuilds for KDE 3.5.0 final. It is not yet released, and is package.masked.

  13 Nov 2005; Diego Pettenò <flameeyes@gentoo.org>
  mpeglib-3.5.0_rc1.ebuild:
  Remove patch as rc1 uses a different way to find out the types (uses
  sys/types.h).

*mpeglib-3.5.0_rc1 (12 Nov 2005)
