@@ -1,6 +1,6 @@
 # Copyright 1999-2006 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /usr/local/ssd/gentoo-x86/output/kde-base/cvs-repo/gentoo-x86/kde-base/mpeglib/Attic/mpeglib-3.4.1.ebuild,v 1.11 2006/03/25 17:32:01 agriffis Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/kde-base/cvs-repo/gentoo-x86/kde-base/mpeglib/Attic/mpeglib-3.4.1.ebuild,v 1.12 2006/06/22 13:04:51 flameeyes Exp $
 
 KMNAME=kdemultimedia
 MAXKDEVER=3.4.3
@@ -12,6 +12,9 @@ KEYWORDS="alpha amd64 ia64 ppc ppc64 sparc x86"
 IUSE=""
 DEPEND="media-sound/cdparanoia"
 
-myconf="--with-cdparanoia --enable-cdparanoia"
-
 PATCHES="${FILESDIR}/kdemultimedia-3.4.0-amd64.patch"
+
+src_compile() {
+	myconf="--with-cdparanoia --enable-cdparanoia"
+	kde-meta_src_compile
+}
