@@ -1,6 +1,10 @@
 # ChangeLog for kde-base/mpeglib
 # Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/kde-base/cvs-repo/gentoo-x86/kde-base/mpeglib/Attic/ChangeLog,v 1.36 2006/06/01 21:05:10 flameeyes Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/kde-base/cvs-repo/gentoo-x86/kde-base/mpeglib/Attic/ChangeLog,v 1.37 2006/06/22 13:04:51 flameeyes Exp $
+
+  22 Jun 2006; Diego Pettenò <flameeyes@gentoo.org> mpeglib-3.4.1.ebuild,
+  mpeglib-3.5.1.ebuild:
+  Move myconf population in src_compile rather than global scope.
 
   01 Jun 2006; Diego Pettenò <flameeyes@gentoo.org> mpeglib-3.5.1.ebuild:
   Update to new release.
